update resize windows

--- a/data/go-api-deployment.yaml
+++ b/data/go-api-deployment.yaml
@@ -12,6 +12,7 @@ spec:
       labels:
         app: go-api
     spec:
+      serviceAccountName: admin-sa
       containers:
         - name: go-api
           image: golang:latest
