--- a/yamls/discovery.yaml
+++ b/yamls/discovery.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: discovery-server
+  name: ros2-discovery-server
   labels:
     app: ros2-discovery-server
 spec:
   containers:
   - name: discovery-server
-    image: master.harbor.registry/library/ubuntu-fastdds:v3.2.2
+    image: "master.harbor.registry/library/ubuntu-fastdds:v3.2.2"
     imagePullPolicy: Always
     command: ["/bin/bash", "-c"]
     args: ["source /usr/local/eprosima/setup.bash && fastdds discovery -i 0 -p 11811"]
@@ -25,12 +25,28 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: discovery-server-svc
+  name: ros2-discovery-server
+  labels:
+    app: ros2-discovery-server
 spec:
-  clusterIP: None
+  clusterIP: None  # ← Headless!
   selector:
-    app: ros2-discovery-server 
+    app: ros2-discovery-server
   ports:
-    - protocol: UDP
+    - name: discovery
       port: 11811
+      protocol: UDP
       targetPort: 11811
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: ros2-bridge-service
+spec:
+  selector:
+    app: pros_app
+  ports:
+    - protocol: TCP
+      port: 9090
+      targetPort: 9090
+  type: LoadBalancer
