--- a/k8s/go-api.yaml
+++ b/k8s/go-api.yaml
@@ -20,7 +20,7 @@ spec:
           - 1.1.1.1
       containers:
         - name: go-api
-          image: platform-go-api:latest
+          image: linskybing/platform-go-api:latest
           imagePullPolicy: Always
           command: ["sleep", "infinity"]
           volumeMounts:
@@ -46,7 +46,7 @@ spec:
       volumes:
         - name: local-data
           hostPath:
-            path: /home/lin/Desktop/platform-go
+            path: /home/lin/Desktop/k8s/platform-go
             type: Directory
 ---
 apiVersion: v1
