--- a/k8s/postgres.yaml
+++ b/k8s/postgres.yaml
@@ -26,7 +26,7 @@ spec:
     spec:
       containers:
         - name: postgres
-          image: postgres-with-pg_cron:latest
+          image: linskybing/postgres-with-pg_cron:latest
           imagePullPolicy: Always
           ports:
             - containerPort: 5432
