--- a/k8s/postgres.yaml
+++ b/k8s/postgres.yaml
@@ -24,9 +24,11 @@ spec:
       labels:
         app: postgres
     spec:
+      imagePullSecrets:
+        - name: harbor-cred
       containers:
         - name: postgres
-          image: linskybing/postgres-with-pg_cron:latest
+          image: 192.168.109.1:30002/platform/postgres-with-pg_cron:latest
           imagePullPolicy: Always
           ports:
             - containerPort: 5432
