--- a/k8s/go-api.yaml
+++ b/k8s/go-api.yaml
@@ -13,6 +13,8 @@ spec:
         app: go-api
     spec:
       serviceAccountName: admin-sa
+      imagePullSecrets:
+        - name: harbor-cred
       dnsPolicy: ClusterFirst
       dnsConfig:
         nameservers:
@@ -20,7 +22,7 @@ spec:
           - 1.1.1.1
       containers:
         - name: go-api
-          image: linskybing/platform-go-api:latest
+          image: 192.168.109.1:30002/platform/platform-go-api:latest
           imagePullPolicy: Always
           command: ["sleep", "infinity"]
           volumeMounts:
@@ -46,7 +48,7 @@ spec:
       volumes:
         - name: local-data
           hostPath:
-            path: /home/lin/Desktop/k8s/platform-go
+            path: /home/user/k8s/platform-go
             type: Directory
 ---
 apiVersion: v1
