--- a/k8s/go-api.yaml
+++ b/k8s/go-api.yaml
@@ -12,14 +12,16 @@ spec:
       labels:
         app: go-api
     spec:
+      # Dev mode: stick to gpu1; adjust if needed
       nodeSelector:
         kubernetes.io/hostname: gpu1
       serviceAccountName: admin-sa
       dnsPolicy: ClusterFirst
       containers:
         - name: go-api
-          image: 192.168.109.1:30002/library/platform-go-api:latest
+          image: 192.168.109.1:30003/library/platform-go-api:latest
           imagePullPolicy: Always
+          # Dev mode: keep container running for live code mount
           command: ["sleep", "infinity"]
           volumeMounts:
             - mountPath: /go/web-go
