--- a/k8s/storage.yaml
+++ b/k8s/storage.yaml
@@ -1,7 +1,10 @@
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
-  name: longhorn
-provisioner: docker.io/hostpath
+  name: nfs-client
+provisioner: cluster.local/nfs-client-nfs-subdir-external-provisioner
+parameters:
+  archiveOnDelete: "true"
 reclaimPolicy: Delete
 volumeBindingMode: Immediate
+allowVolumeExpansion: true
