--- a/k8s/storage.yaml
+++ b/k8s/storage.yaml
@@ -1,7 +1,7 @@
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
-  name: nfs-client
+  name: longhorn
 provisioner: cluster.local/nfs-client-nfs-subdir-external-provisioner
 parameters:
   archiveOnDelete: "true"
